Changed removeFirst() to remove(0)